# aura-engine

./: .gitignore  README.md  api.py  evaluate.py  evaluate_rag.py  evaluate_rag_metrics2.py  evaluation_metrics.py  evaluation_metriks.py  ground_truth.json  ground_truth_Laprak _Minggu 2 dan 3_Kelompok 6.json  hasil_grading.json  index.py  metric_results.json  payload.json  pyproject.toml  rag_grading.py  rag_grading_improved.py  rag_grading_improved2.py  requirements.txt  requirements_evaluate.txt
data/: rubrik.json
