[project]
name = "aura-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.0.0",
    "numpy>=2.3.4",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "sentence-transformers",
]
